# AI-Summarizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  routes.py
app/core/: config.py
app/services/: drive_service.py  parser_service.py  report_service.py  summarizer_service.py
app/templates/: index.html
output/: Summary_Summarize_20260227_143909.csv  Summary_Summarize_20260228_143628.csv  Summary_Summarize_20260228_144458.csv  Summary_Summarize_20260228_150453.csv  Summary_Summarize_20260228_150652.csv  Summary_Summarize_20260228_151047.csv
temp/Summarize/: Auto_Insurance.docx  consolidated_output.txt
